# devops-pipeline-gym

./: .dockerignore  .env.example  .gitignore  BLOG.md  Dockerfile  PROJECT_EXPLAINED.md  README.md  __init__.py  client.py  devops_pipeline_gym_colab.ipynb  gradio_app.py  inference.py  integration_test.py  kaggle_eval.ipynb  models.py  openenv.yaml  pyproject.toml  requirements-demo.txt  requirements-training.txt  requirements.txt
data/: sft_trajectories.jsonl  sft_trajectories_TEMPLATE.md
demo_space/: README.md  app.py  requirements.txt
docs/: architecture.md  video_script.md
frontier_results/: eval_frontier_deepseek_v31.json  eval_frontier_gpt_oss_120b.json  eval_frontier_llama33_70b.json  eval_frontier_mistral_large.json  eval_frontier_qwen25_72b.json
model_cards/: sft_adapter_README.md
scripts/: kaggle_cell_acc1.py  kaggle_cell_acc2.py  kaggle_eval.py  phase_m_grpo_job.py  phase_m_grpo_smoke.py  phase_m_sft_job.py  render_diagram.py  run_phase_m.sh  strip_handoff_notes.py
scripts/hf_jobs/: eval_frontier_job.py  eval_job.py  grpo_retry_job.py  run_evals.sh  run_frontier.sh  run_grpo_retry.sh
server/: __init__.py  adversarial_designer.py  app.py  curriculum.py  graders.py  handoff_metrics.py  judge_client.py  ollama_client.py  pipeline_engine.py  pipeline_environment.py  rewards.py  roles.py  scenarios.py
training/: README.md  SATURDAY_PLAYBOOK.md  __init__.py  eval_baseline.py  export_replay.py  generate_comparison_chart.py  grpo_train.py  plot_grpo_curve.py  render_replay.py  sft_warmup.py
