# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-pipeline-gym"
version = "0.1.0"
description = "CI/CD Pipeline Management OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = ["pytest"]
# Phase 6 training deps. NOT installed on the HF Space (CPU-only; these
# require CUDA via bitsandbytes / unsloth). Install separately on Kaggle
# T4 / H100 for training + eval runs:
#   pip install -e '.[training]'
training = [
    "torch>=2.3",
    "unsloth",
    "trl>=0.29.0",
    "peft>=0.10",
    "bitsandbytes>=0.43",
    "transformers>=4.45",
    "datasets>=2.20",
    "matplotlib>=3.8",
    "accelerate>=0.30",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m devops_pipeline_gym.server.app
server = "devops_pipeline_gym.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["devops_pipeline_gym", "devops_pipeline_gym.server"]
package-dir = { "devops_pipeline_gym" = ".", "devops_pipeline_gym.server" = "server" }